--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "Personal-Assignment",
+  "name": "REST-practice",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "nodemon server.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write \"**/*.js\"",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "swagger": "node ./swagger.js"
   },
-  "author": "Dagwan",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.16.3",
     "mongodb": "^4.4.0",
-    "mongoose": "^7.5.4",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3"
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "eslint": "^8.10.0",
@@ -29,6 +26,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^1.18.4",
     "prettier": "^2.5.1",
-    "swagger-autogen": "^2.23.6"
+    "swagger-autogen": "^2.19.0"
   }
 }
