--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "Personal-Assignment",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "Server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "nodemon Server.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write \"**/*.js\"",
