Updating the application

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Personal-Assignment",
+  "name": "Ecard application",
   "version": "1.0.0",
   "description": "",
   "main": "Server.js",
