--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.16.3",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.4.0",
     "mongoose": "^7.5.4",
     "swagger-jsdoc": "^6.2.8",
