--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon Server.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
@@ -29,8 +29,13 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^1.18.4",
     "prettier": "^2.5.1",
+    "supertest": "^7.0.0",
     "swagger-autogen": "^2.23.6"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
