--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.16.3",
+    "express": "^4.19.2",
     "express-jwt": "^8.4.1",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.4.0",
     "mongoose": "^7.5.4",
